Remove various mvcss default variables in preference of material design nomenclature.

--- a/app/assets/stylesheets/foundation/_base.sass
+++ b/app/assets/stylesheets/foundation/_base.sass
@@ -33,7 +33,7 @@ h1, .h1,
 h2, .h2,
 h3, .h3,
 h4, .h4
-	font-family: $b-fontFamily-heading
+	font-family: $b-fontFamily
 	font-weight: bold
 	line-height: 1.2
 	margin-bottom: $b-space-xs
@@ -63,7 +63,7 @@ a
 	text-decoration: none
 	&:hover,
 	&:focus
-		border-bottom-color: $c-highlight
+		border-bottom-color: $c-text
 		color: $c-text
 
 // ----- Images ----- //
