--- a/app/assets/stylesheets/foundation/_config.sass
+++ b/app/assets/stylesheets/foundation/_config.sass
@@ -6,43 +6,26 @@
 // *************************************
 
 // -------------------------------------
-//   @font-face
-// -------------------------------------
-
-// ----- Open Sans ----- //
-
-// +font-face('OpenSans', 'OpenSans')
-// +font-face('OpenSans', 'OpenSansBold', bold)
-// +font-face('OpenSans', 'OpenSansItalic', normal, italic)
-
-// -------------------------------------
 //   Colors
 // -------------------------------------
 
 // ----- Palette ----- //
-
-$plum: #4e4e5b
 
 $blue-50: #e3f2fd
 $blue-100: #bbdefb
 $blue-500: #2196f3
 $blue-900: #0d47a1
 
-
 // ----- Base ----- //
 
 $c-accent: $blue-500
-$c-background-invert: #fff
-$c-background: #eee
-$c-border: lighten($plum, 30%)
 $c-focus: #fff
-$c-highlight: $plum
-$c-shadow: rgba(0, 0, 0, 0.3)
-$c-subdue: lighten($plum, 40%)
-$c-text-invert: #fff
-// $c-text: #000
 
+$c-background: #eee
 $c-hover: $blue-50
+$c-shadow: rgba(0, 0, 0, 0.3)
+
+// ----- Text ----- //
 
 $c-text: #000
 $c-text-invert: #fff
@@ -56,14 +39,6 @@ $c-text-invert-primary: $c-text-invert
 $c-text-invert-secondary: rgba($c-text-invert, 0.7)
 $c-text-invert-disabled: rgba($c-text-invert, 0.30)
 $c-text-invert-divider: rgba($c-text-invert, 0.12)
-
-// ----- Components ----- //
-
-// ...
-
-// ----- Structures ----- //
-
-// ...
 
 // -------------------------------------
 //   Base
@@ -79,7 +54,6 @@ $b-boxShadow: 0 2px 0 rgba($c-text, 0.25)
 
 // ----- Typography ----- //
 
-$b-fontFamily-heading: 'Roboto', sans-serif
 $b-fontFamily: 'Roboto', sans-serif
 $b-fontSize: 16px
 $b-fontSize-xs: 60%
