--- a/app/assets/stylesheets/foundation/_base.sass
+++ b/app/assets/stylesheets/foundation/_base.sass
@@ -23,6 +23,10 @@ ul, p
 	margin-bottom: $b-space
 	margin-top: 0
 
+p
+	padding-left: 1em
+	padding-right: 1em
+
 li
 	margin-bottom: $b-space-s
 	margin-top: 0
@@ -63,8 +67,8 @@ a
 	text-decoration: none
 	&:hover,
 	&:focus
-		border-bottom-color: $c-text
-		color: $c-text
+		border-bottom-color: $c-text-primary
+		color: $c-text-primary
 
 // ----- Images ----- //
 
