--- a/app/assets/stylesheets/foundation/_config.sass
+++ b/app/assets/stylesheets/foundation/_config.sass
@@ -22,6 +22,9 @@ $c-accent: $blue-500
 $c-focus: #fff
 
 $c-background: #eee
+$c-btn-hover: rgba(#999, 0.2)
+$c-btn-invert-hover: rgba(#ccc, 0.15)
+$c-danger: #f44336
 $c-hover: $blue-50
 $c-shadow: rgba(0, 0, 0, 0.3)
 
