Change list width; it's easier to read when the keys are beside the values.

--- a/app/assets/stylesheets/components/_list.sass
+++ b/app/assets/stylesheets/components/_list.sass
@@ -1,15 +1,10 @@
 .list
 	display: table
 	margin-bottom: 1em
-	width: 100%
+	// width: 100%
 
 .list-item
 	display: table-row
-
-	&:active, &:focus, &:hover
-		background-color: $c-hover
-
-	transition: background-color 0.2s
 
 .list-key
 	color: $c-text-secondary
