--- a/app/views/alerts/show.html.erb
+++ b/app/views/alerts/show.html.erb
@@ -18,7 +18,7 @@
 				<p><%= @alert.alertable.name %> (<%= @alert.alertable_type %>)</p>
 <% end %>
 
-				<div class="divider mbm"></div>
+				<div class="divider"></div>
 				<div>
 					<%= link_to "Remove", @alert, method: :delete, class: "button button--danger button--first", data: {confirm: "Are you sure you want to remove the alert #{@alert.name}?"} %>
 				</div>
