Swap .tile-icon for .icon, to be DRY.

--- a/app/views/alerts/index.html.erb
+++ b/app/views/alerts/index.html.erb
@@ -4,8 +4,8 @@
 				<p class="subheader subheader--padded">Alerts (<%= @alerts.count %>)</p>
 	<% for alert in @alerts %>
 				<div class="tile">
-					<%= link_to alert, class: "tile-action" do %>
-						<svg class="tile-icon tile-icon--a"><use xlink:href="#icon-view"></use></svg>
+					<%= link_to alert, class: "icon tile-icon--a" do %>
+						<svg><use xlink:href="#icon-view"></use></svg>
 					<% end %>
 					<%= link_to alert, class: "tile-action tile-action--focus" do %>
 						<div class="tile-text">
@@ -18,8 +18,8 @@
 							</div>
 						</div>
 					<% end %>
-					<%= link_to alert, method: :delete, data: {confirm: "Are you sure you want to remove #{alert.name}?"}, class: "tile-action" do %>
-						<svg class="tile-icon tile-icon--b"><use xlink:href="#icon-cross"></use></svg>
+					<%= link_to alert, method: :delete, data: {confirm: "Are you sure you want to remove #{alert.name}?"}, class: "icon tile-icon--b" do %>
+						<svg><use xlink:href="#icon-cross"></use></svg>
 					<% end %>
 				</div>
 	<% end %>
