--- a/app/views/disks/index.html.erb
+++ b/app/views/disks/index.html.erb
@@ -7,8 +7,8 @@
 				<p class="subheader subheader--padded">Disks with Alerts (<%= @disks_with_alerts.count %>)</p>
 	<% for disk in @disks_with_alerts %>
 				<div class="tile">
-					<%= link_to disk, class: "tile-action" do %>
-						<svg class="tile-icon tile-icon--a"><use xlink:href="#icon-view"></use></svg>
+					<%= link_to disk, class: "icon tile-icon--a" do %>
+						<svg><use xlink:href="#icon-view"></use></svg>
 					<% end %>
 					<%= link_to disk, class: "tile-action tile-action--focus" do %>
 						<div class="tile-text">
@@ -23,8 +23,8 @@
 							</div>
 						</div>
 					<% end %>
-					<%= link_to edit_disk_path(disk), class: "tile-action" do %>
-						<svg class="tile-icon tile-icon--b"><use xlink:href="#icon-edit"></use></svg>
+					<%= link_to edit_disk_path(disk), class: "icon tile-icon--b" do %>
+						<svg><use xlink:href="#icon-edit"></use></svg>
 					<% end %>
 				</div>
 	<% end %>
@@ -35,8 +35,8 @@
 				<p class="subheader subheader--padded">All Disks (<%= @disks.count %>)</p>
 	<% for disk in @disks %>
 				<div class="tile">
-					<%= link_to disk, class: "tile-action" do %>
-						<svg class="tile-icon tile-icon--a"><use xlink:href="#icon-view"></use></svg>
+					<%= link_to disk, class: "icon tile-icon--a" do %>
+						<svg><use xlink:href="#icon-view"></use></svg>
 					<% end %>
 					<%= link_to disk, class: "tile-action tile-action--focus" do %>
 						<div class="tile-text">
@@ -51,8 +51,8 @@
 							</div>
 						</div>
 					<% end %>
-					<%= link_to edit_disk_path(disk), class: "tile-action" do %>
-						<svg class="tile-icon tile-icon--b"><use xlink:href="#icon-edit"></use></svg>
+					<%= link_to edit_disk_path(disk), class: "icon tile-icon--b" do %>
+						<svg><use xlink:href="#icon-edit"></use></svg>
 					<% end %>
 				</div>
 	<% end %>
