Add -fontWeight variables and use them.

--- a/app/assets/stylesheets/components/_subheader.sass
+++ b/app/assets/stylesheets/components/_subheader.sass
@@ -1,7 +1,5 @@
 .subheader
-	color: $c-text-secondary
-	font-size: $b-fontSize-secondary
-	font-weight: 400
+	font-weight: $b-fontWeight
 	margin-bottom: 0
 	padding: $b-fontSize
 
