--- a/app/assets/stylesheets/foundation/_config.sass
+++ b/app/assets/stylesheets/foundation/_config.sass
@@ -68,6 +68,9 @@ $b-lineHeight: 1.25
 
 $b-fontSize-secondary: 14px
 
+$b-fontWeight: 400
+$b-fontWeight-bold: 500
+
 // ----- Sizing ----- //
 
 $b-maxWidth: em(1024px)
