--- a/app/assets/stylesheets/foundation/_tools.sass
+++ b/app/assets/stylesheets/foundation/_tools.sass
@@ -229,9 +229,9 @@
 // ----- Weight ----- //
 
 .twn
-	font-weight: normal
+	font-weight: $b-fontWeight
 .twb
-	font-weight: bold
+	font-weight: $b-fontWeight-bold
 
 // ----- Lists ----- //
 
