Use .subtitle as a base component for .subheader and .tile-subtitle.

--- a/app/assets/stylesheets/components/_subheader.sass
+++ b/app/assets/stylesheets/components/_subheader.sass
@@ -3,5 +3,7 @@
 	margin-bottom: 0
 	padding: $b-fontSize
 
+	@extend .subtitle
+
 .subheader--padded
 	padding-left: em(72px, $b-fontSize-secondary)
