--- a/app/views/disks/show.html.erb
+++ b/app/views/disks/show.html.erb
@@ -1,9 +1,9 @@
 <% page_title "Disk: #{@disk.name}" %>
 			<article class="focus focus--top">
 				<div class="group">
-					<a class="icon fl" href="<%= url_for disks_path %>">
+					<%= link_to disks_path, class: "icon fl", title: "Disk Index" do %>
 						<svg><use xlink:href="#icon-back"></use></svg>
-					</a>
+					<% end %>
 					<div class="subheader fr">
 						Last noted <%= @disk.updated_at.strftime("%l:%M%P on %-m/%-d/%y") %>
 					</div>
@@ -29,10 +29,10 @@
 				<p class="subheader subheader--padded">Alerts (<%= @disk.alerts.count %>)</p>
 	<% for alert in @disk.alerts %>
 				<div class="tile">
-					<%= link_to alert, class: "tile-action" do %>
-						<svg class="tile-icon tile-icon--a"><use xlink:href="#icon-view"></use></svg>
+					<%= link_to alert, class: "icon tile-icon--a", title: "View Alert" do %>
+						<svg><use xlink:href="#icon-view"></use></svg>
 					<% end %>
-					<%= link_to alert, class: "tile-action tile-action--focus" do %>
+					<%= link_to alert, class: "tile-action tile-action--focus", title: "View Alert" do %>
 						<div class="tile-text">
 							<div class="tile-title">
 								<%= alert.name %>
@@ -42,8 +42,8 @@
 							</div>
 						</div>
 					<% end %>
-					<%= link_to alert, method: :delete, data: {confirm: "Are you sure you want to remove #{alert.name}?"}, class: "tile-action" do %>
-						<svg class="tile-icon tile-icon--b"><use xlink:href="#icon-cross"></use></svg>
+					<%= link_to alert, method: :delete, data: {confirm: "Are you sure you want to remove the alert #{alert.name}?"}, class: "icon tile-icon--b", title: "Remove Alert" do %>
+						<svg><use xlink:href="#icon-cross"></use></svg>
 					<% end %>
 				</div>
 	<% end %>
@@ -71,7 +71,7 @@
 
 				<div class="divider"></div>
 				<div>
-					<%= link_to "Edit", edit_disk_path(@disk), class: "button button--first" %>
-					<%= link_to "Remove", @disk, method: :delete, class: "button button--danger", data: {confirm: "Are you sure you want to remove the disk #{@disk.name}?"} %>
+					<%= link_to "Edit", edit_disk_path(@disk), class: "button button--first", title: "Edit Disk" %>
+					<%= link_to "Remove", @disk, method: :delete, class: "button button--danger", data: {confirm: "Are you sure you want to remove the disk #{@disk.name}?"}, title: "Remove Disk" %>
 				</div>
 			</article>
