--- a/app/views/machines/show.html.erb
+++ b/app/views/machines/show.html.erb
@@ -1,9 +1,9 @@
 <% page_title "Machine: #{@machine.name}" %>
 			<article class="focus focus--top">
 				<div class="group">
-					<a class="icon fl" href="<%= url_for machines_path %>">
+					<%= link_to machines_path, class: "icon fl", title: "Machine Index" do %>
 						<svg><use xlink:href="#icon-back"></use></svg>
-					</a>
+					<% end %>
 					<div class="subheader fr">
 						Last checked <%= @machine.updated_at.strftime("%l:%M%P on %-m/%-d/%y") %>
 					</div>
@@ -25,7 +25,7 @@
 
 				<div class="divider"></div>
 				<div>
-					<%= link_to "Edit", edit_machine_path(@machine), class: "button button--first" %>
-					<%= link_to "Remove", @machine, method: :delete, class: "button button--danger", data: {confirm: "Are you sure you want to remove the machine #{@machine.name}?"} %>
+					<%= link_to "Edit", edit_machine_path(@machine), class: "button button--first", title: "Edit Machine" %>
+					<%= link_to "Remove", @machine, method: :delete, class: "button button--danger", data: {confirm: "Are you sure you want to remove the machine #{@machine.name}?"}, title: "Remove Machine" %>
 				</div>
 			</article>
