Rearrange information on alert show view, make related property clickable, and truncate tile titles on size-down.

--- a/app/assets/stylesheets/structures/_tile.sass
+++ b/app/assets/stylesheets/structures/_tile.sass
@@ -29,6 +29,11 @@
 .tile-text
 	padding-top: 1em
 
+.tile-title
+	overflow: hidden
+	text-overflow: ellipsis
+	white-space: nowrap
+
 .tile-subtitle
 	overflow: hidden
 	text-overflow: ellipsis
