Add snackbars for flash messages, as well as transitions on and off of the screen.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 	<body>
 <%= render 'layouts/icon_defs' %>
 <%= render 'layouts/header' %>
+<%= render 'layouts/messages' %>
 <%= render 'layouts/nav' %>
 
 		<section class="page">
