--- a/app/assets/stylesheets/foundation/_config.sass
+++ b/app/assets/stylesheets/foundation/_config.sass
@@ -25,8 +25,11 @@ $c-background: #eee
 $c-btn-hover: rgba(#999, 0.2)
 $c-btn-invert-hover: rgba(#ccc, 0.15)
 $c-danger: #f44336
+$c-danger-bg: darken($c-danger, 25%)
 $c-hover: $blue-50
 $c-shadow: rgba(0, 0, 0, 0.3)
+
+$c-message-bg: #323232
 
 // ----- Text ----- //
 
@@ -75,6 +78,7 @@ $b-fontWeight-bold: 500
 
 $b-maxWidth: em(1024px)
 $b-maxWidth-s: em(700px)
+$b-maxWidth-xs: em(568px)
 $b-space: em(20px)
 $b-space-xs: $b-space * 0.25
 $b-space-s: $b-space * 0.5
