Add cohesive views for login, signup, and password-related functions.

--- a/app/assets/stylesheets/structures/_form.sass
+++ b/app/assets/stylesheets/structures/_form.sass
@@ -21,23 +21,31 @@
 .textField > label.is-required:after
 	content: ' *'
 
-.textField > input[type='text']
-	border: 0px none
-	border-bottom: 2px solid $c-text-divider
-	display: block
-	margin-bottom: 0.5em
-	padding: 0 0 0.25em 0
-	width: 100%
+.textField
+	input[type='text'], input[type='email'], input[type='password']
+		border: 0px none
+		border-bottom: 2px solid $c-text-divider
+		display: block
+		margin-bottom: 0.5em
+		padding: 0 0 0.25em 0
+		width: 100%
 
-	&:active, &:focus
-		border-bottom: 2px solid $c-accent
+		&:active, &:focus
+			border-bottom: 2px solid $c-accent
 
-.textField.has-error > input[type='text']
-	border-bottom: 2px solid $c-danger
-	margin-bottom: 0.25em
+.textField.has-error
+	input[type='text'], input[type='email'], input[type='password']
+		border-bottom: 2px solid $c-danger
+		margin-bottom: 0.25em
 
 .textField-error
 	color: $c-danger
+	display: block
+	font-size: 0.75em
+	margin-bottom: (1em / 3)
+
+.textField-subtitle
+	color: $c-text-secondary
 	display: block
 	font-size: 0.75em
 	margin-bottom: (1em / 3)
