--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,44 @@
-<h2>Sign up</h2>
+<% page_title "Sign Up" %>
+			<article class="focus focus--top">
+				<%= form_for resource, as: resource_name, url: registration_path(resource_name), html: {novalidate: true} do |f| %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @validatable %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
+					<div class="textField <%= "has-error" if resource.errors.include? :name %>">
+						<%= f.label :name, "Your Name", class: "is-required" %>
+						<%= f.text_field :name, placeholder: "Rob", required: true, autofocus: true %>
+<% if resource.errors.include? :name %>
+						<div class="textField-error"><%= resource.errors.full_messages_for(:name).first %></div>
 <% end %>
+					</div>
 
-<%= render "devise/shared/links" %>
+					<div class="textField <%= "has-error" if resource.errors.include? :email %>">
+						<%= f.label :email, "Your Email", class: "is-required" %>
+						<%= f.email_field :email, placeholder: "rob@example.com", autofocus: true %>
+<% if resource.errors.include? :email %>
+						<div class="textField-error"><%= resource.errors.full_messages_for(:email).first %></div>
+<% end %>
+					</div>
+
+					<div class="textField <%= "has-error" if resource.errors.include? :password %>">
+						<%= f.label :password, "Your Password", class: "is-required" %>
+						<%= f.password_field :password, placeholder: "8 Characters Minimum", autocomplete: "off" %>
+<% if resource.errors.include? :password %>
+								<div class="textField-error"><%= resource.errors.full_messages_for(:password).first %></div>
+<% end %>
+					</div>
+
+					<div class="textField <%= "has-error" if resource.errors.include? :password_confirmation %>">
+						<%= f.label :password_confirmation, "Confirm Password", class: "is-required" %>
+						<%= f.password_field :password_confirmation, autocomplete: "off" %>
+<% if resource.errors.include? :password_confirmation %>
+						<div class="textField-error"><%= resource.errors.full_messages_for(:password_confirmation).first %></div>
+<% end %>
+					</div>
+
+					<div class="divider"></div>
+					<div>
+						<%= f.submit "Sign Up", class: "button button--first button--danger", title: "Sign Up" %>
+						<%= link_to "Log In", new_session_path(resource_name), class: "button", title: "Log In" %>
+						<%= link_to "I Forgot", new_password_path(resource_name), class: "button", title: "Forgot Password" %>
+					</div>
+				<% end %>
+			</article>
