--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,22 +1,29 @@
-<h2>Change your password</h2>
+<% page_title "Change Your Password" %>
+			<article class="focus focus--top">
+				<%= form_for resource, as: resource_name, url: password_path(resource_name), html: { method: :put, novalidate: true } do |f| %>
+					<%= f.hidden_field :reset_password_token %>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
-
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
+					<div class="textField <%= "has-error" if resource.errors.include? :password %>">
+						<%= f.label :password, "New Password" %>
+						<%= f.password_field :password, placeholder: "8 Characters Minimum", required: true, autofocus: true, autocomplete: "off" %>
+<% if resource.errors.include? :password %>
+						<div class="textField-error"><%= resource.errors.full_messages_for(:password).first %></div>
 <% end %>
+					</div>
 
-<%= render "devise/shared/links" %>
+					<div class="textField <%= "has-error" if resource.errors.include? :password_confirmation %>">
+						<%= f.label :password_confirmation, "Confirm Password" %>
+						<%= f.password_field :password_confirmation, required: true, autocomplete: "off" %>
+<% if resource.errors.include? :password_confirmation %>
+						<div class="textField-error"><%= resource.errors.full_messages_for(:password_confirmation).first %></div>
+<% end %>
+					</div>
+
+					<div class="divider"></div>
+					<div>
+						<%= f.submit "Change Password", class: "button button--first button--danger" %>
+						<%= link_to "Log In", new_session_path(resource_name), class: "button", title: "Log In" %>
+						<%= link_to "Sign Up", new_registration_path(resource_name), class: "button", title: "Sign Up" %>
+					</div>
+				<% end %>
+			</article>
